feat: Distributed jobs - Some jobs now support horizontal scaling thanks to Redis locking - Improving various jobs performance handling - Adding new guard that can disable controller endpoints based on configuration - Fixing test cases, will work on adding more here soon for more coverage - Adding better plaid support including webhooks, signature verification, account removal (for cost savings), etc - Improving various enabled states for providers - Updating provider selection menu - Fixing holding service not properly tracking the correct day rate change, it was just taking the entire week of changes - Fixing loading state losing what page we were on last - Adding so much more dynamic sizing to the displays - Getting test cases back to a working shape for the time being. Will improve coverage next.
